--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,8 +7,7 @@ body {
 
 .container {
     display: grid;
-    padding: 3em;
-    grid-gap: 2em;
+    
     grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
     grid-template-rows: max-content;
     grid-template-areas:
